# internal/banner/delivery/http/v1/handlers/banner_handler.go
@@ -22,6 +22,7 @@ const BannerIdField = "id"
 const (
 	TagIdParam     = "tag_id"
 	FeatureIdParam = "feature_id"
+	VersionParam   = "version"
 	limitParam     = "limit"
 	offsetParam    = "offset"
 )
@@ -174,10 +175,11 @@ func (bh *BannerHandlers) UpdateBanner(c *gin.Context) {
 // GetUserBanner
 //
 //	@Summary		Получение баннера для пользователя.
-//	@Description	Возвращает баннер на основании тэга группы пользователей и фичи.
+//	@Description	Возвращает баннер на основании тэга группы пользователей, фичи и версии, если версия не указана, то вернётся последняя.
 //	@Tags			banner
 //	@Param			tag_id				query	integer	true	"Идентификатор тэга группы пользователей"
 //	@Param			feature_id			query	integer	true	"Идентификатор фичи"
+//	@Param			version				query	integer	false	"Версия баннера"
 //	@Param			use_last_revision	query	boolean	false	"Получать актуальную информацию"
 //	@Produce		json
 //	@Success		200	{object}	any			"JSON-отображение баннера"
@@ -193,6 +195,7 @@ func (bh *BannerHandlers) GetUserBanner(c *gin.Context) {
 	l := middleware.GetLogger(c)
 
 	var tagId, featureId types.Id
+	var version = new(uint32)
 
 	if rawTagId, err := tools.ParseQueryParamToUint64(c, TagIdParam,
 		ErrorTagIdNotPresented, ErrorTagIdIncorrectType, l); err == nil {
@@ -210,7 +213,18 @@ func (bh *BannerHandlers) GetUserBanner(c *gin.Context) {
 		return
 	}
 
-	content, err := bh.usecase.GetUserBanner(featureId, tagId)
+	if rawVersion, err := tools.ParseQueryParamToUint64(c, VersionParam,
+		ErrorVersionNotPresented, ErrorVersionIncorrectType, l); err == nil {
+		*version = uint32(rawVersion)
+	} else {
+		if !errors.Is(err, ErrorVersionNotPresented) {
+			tools.SendError(c, err, http.StatusBadRequest, l)
+			return
+		}
+		version = nil
+	}
+
+	content, err := bh.usecase.GetUserBanner(featureId, tagId, version)
 	if err != nil {
 		if errors.Is(err, br.ErrorBannerNotFound) {
 			tools.SendErrorStatus(c, err, http.StatusNotFound, l)
@@ -224,11 +238,12 @@ func (bh *BannerHandlers) GetUserBanner(c *gin.Context) {
 
 	tools.SendStatus(c, http.StatusOK, content, l)
 
-	if err := bh.cache.SetCache(featureId, tagId, types.Content(content)); err != nil {
-		l.Error(errors.Wrapf(err, "can't cache banner with feature id %d and tag id %d", featureId, tagId))
+	if err := bh.cache.SetCache(featureId, tagId, version, types.Content(content)); err != nil {
+		l.Error(errors.Wrapf(err,
+			"can't cache banner with feature id %d, tag id %d and version %d", featureId, tagId, version))
 		return
 	}
-	l.Info("banner with feature id %d and tag id %d was cached", featureId, tagId)
+	l.Info("banner with feature id %d, tag id %d and version %d was cached", featureId, tagId, version)
 }
 
 // GetAdminBanner
@@ -306,7 +321,70 @@ func (bh *BannerHandlers) GetAdminBanner(c *gin.Context) {
 		return
 	}
 
-	tools.SendStatus(c, http.StatusOK, slices.Map(banners, func(banner models.Banner) response.Banner {
-		return *response.FromModelBanner(&banner)
+	tools.SendStatus(c, http.StatusOK, slices.Map(banners, func(banner *models.Banner) response.Banner {
+		return *response.FromModelBanner(banner)
 	}), l)
+}
+
+// DeleteFilterBanner
+//
+//	@Summary		Удаление всех баннеров c фильтрацией по фиче или тегу
+//	@Description	Удаляет баннеры на основе фильтра по фиче или тегу. Обязателен один из query параметров.
+//	@Tags			banner
+//	@Param			tag_id		query	integer	false	"Идентификатор тэга группы пользователей"
+//	@Param			feature_id	query	integer	false	"Идентификатор фичи"
+//	@Produce		json
+//	@Success		204	"Баннеры успешно удалены"
+//	@Failure		400	{object}	tools.Error	"Некорректные данные"
+//	@Failure		401	"Пользователь не авторизован"
+//	@Failure		403	"Пользователь не имеет доступа"
+//	@Failure		404	"Баннер с указанными тэгом и фичёй не найден"
+//	@Failure		500	{object}	tools.Error	"Внутренняя ошибка сервера"
+//	@Router			/filter_banner [delete]
+//
+//	@Security		AdminToken
+func (bh *BannerHandlers) DeleteFilterBanner(c *gin.Context) {
+	l := middleware.GetLogger(c)
+
+	var tagId, featureId = new(types.Id), new(types.Id)
+
+	if rawTagId, err := tools.ParseQueryParamToUint64(c, TagIdParam,
+		ErrorTagIdNotPresented, ErrorTagIdIncorrectType, l); err == nil {
+		*tagId = (types.Id)(rawTagId)
+	} else {
+		if !errors.Is(err, ErrorTagIdNotPresented) {
+			tools.SendError(c, err, http.StatusBadRequest, l)
+			return
+		}
+		tagId = nil
+	}
+
+	if rawFeatureId, err := tools.ParseQueryParamToUint64(c, FeatureIdParam,
+		ErrorFeatureIdNotPresented, ErrorFeatureIdIncorrectType, l); err == nil {
+		*featureId = (types.Id)(rawFeatureId)
+	} else {
+		if !errors.Is(err, ErrorFeatureIdNotPresented) {
+			tools.SendError(c, err, http.StatusBadRequest, l)
+			return
+		}
+		featureId = nil
+	}
+
+	if featureId == nil && tagId == nil {
+		tools.SendError(c, ErrorParamsNotPresented, http.StatusBadRequest, l)
+		return
+	}
+
+	err := bh.usecase.DeleteFilteredBanner(featureId, tagId)
+	if err != nil {
+		if errors.Is(err, br.ErrorBannerNotFound) {
+			tools.SendErrorStatus(c, err, http.StatusNotFound, l)
+			return
+		}
+		tools.SendError(c, tools.ErrorServerError, http.StatusInternalServerError, l)
+		l.Error(errors.Wrapf(err, "can't delete filtered banners"))
+		return
+	}
+
+	tools.SendStatus(c, http.StatusNoContent, nil, l)
 }
