# internal/banner/models/models.go
@@ -3,18 +3,25 @@ package models
 import (
 	"bannersrv/internal/banner/entity"
 	"bannersrv/internal/pkg/types"
+	"bannersrv/pkg/slices"
 	"encoding/json"
 	"time"
 )
 
+type Content struct {
+	Version   uint32
+	Content   json.RawMessage
+	CreatedAt time.Time
+}
+
 type Banner struct {
 	Id        types.Id
-	Content   json.RawMessage
 	FeatureId types.Id
 	TagIds    []types.Id
 	IsActive  bool
 	CreatedAt time.Time
 	UpdatedAt time.Time
+	Versions  []Content
 }
 
 type BannerUpdate struct {
@@ -24,10 +31,20 @@ type BannerUpdate struct {
 	IsActive  *types.NullableObject[bool]
 }
 
+func FromContentEntity(banner *entity.Content) *Content {
+	return &Content{
+		Content:   json.RawMessage(banner.Content),
+		Version:   banner.Version,
+		CreatedAt: banner.CreatedAt,
+	}
+}
+
 func FromBannerEntity(banner *entity.Banner) *Banner {
 	return &Banner{
-		Id:        banner.Id,
-		Content:   json.RawMessage(banner.Content),
+		Id: banner.Id,
+		Versions: slices.Map(banner.Versions, func(content *entity.Content) Content {
+			return *FromContentEntity(content)
+		}),
 		FeatureId: banner.FeatureId,
 		TagIds:    banner.TagIds,
 		IsActive:  banner.IsActive,
